--- a/31_ALERTAS_INGRESO/index.html
+++ b/31_ALERTAS_INGRESO/index.html
@@ -2,13 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>ejercicio 3</title>
-    <script type="text/javascript" src="./JS/ejercicio_35.js"></script>
+    <title>Alertas</title>
+    <script type="text/javascript" src="./JS/31-alertas.js"></script>
 </head>
 <body>
     <h1>Curso JS</h1>
     <p>primer script con JS</p>
 </body>
 </html>
-
-
