--- a/64_INTRO_DOM/index.html
+++ b/64_INTRO_DOM/index.html
@@ -13,7 +13,7 @@
     </div>
     
     <!--scripts-->
-    <script type="text/javascript" src="./JS/64-intro.js"></script>
+    <script type="text/javascript" src="./JS/64-intro-v1.js"></script>
 </body>
 </html>
 
